[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/menu.tres" type="DynamicFont" id=1]
[ext_resource path="res://texture/9SliceSprites-4.jpg" type="Texture" id=2]
[ext_resource path="res://texture/button.png" type="Texture" id=3]
[ext_resource path="res://ui/LoadGame.gd" type="Script" id=4]

[node name="LoadGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
patch_margin_left = 55
patch_margin_top = 55
patch_margin_right = 55
patch_margin_bottom = 55
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
anchor_left = 0.18
anchor_top = 0.15
anchor_right = 0.82
anchor_bottom = 0.85
margin_right = -0.00012207
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
margin_right = 1228.0
margin_bottom = 756.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadTitle" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_right = 1228.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 1 )
text = "Load Game"
align = 1

[node name="LocalGamesList" type="VBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 1228.0
margin_bottom = 275.0
rect_min_size = Vector2( 380, 240 )

[node name="GameOptionButton" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer/LocalGamesList"]
margin_right = 1228.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
toggle_mode = true

[node name="GameOptionTitle" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/LocalGamesList/GameOptionButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Game Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 279.0
margin_right = 1228.0
margin_bottom = 303.0
text = "Start Multiplayer Server"

[node name="ServerPWLabel" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 307.0
margin_right = 1228.0
margin_bottom = 321.0
text = "Password"

[node name="ServerPWInput" type="LineEdit" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 325.0
margin_right = 1228.0
margin_bottom = 349.0

[node name="StartButton" type="TextureButton" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_left = 504.0
margin_top = 353.0
margin_right = 724.0
margin_bottom = 408.0
rect_min_size = Vector2( 220, 55 )
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
expand = true

[node name="Start" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/StartButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateTitle" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 412.0
margin_right = 1228.0
margin_bottom = 443.0
custom_fonts/font = ExtResource( 1 )
text = "Create Game"
align = 1

[node name="NameLabel" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 447.0
margin_right = 1228.0
margin_bottom = 461.0
text = "World Name"

[node name="NameInput" type="LineEdit" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 465.0
margin_right = 1228.0
margin_bottom = 489.0
text = "test"

[node name="SeedLabel" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 493.0
margin_right = 1228.0
margin_bottom = 507.0
text = "Seed"

[node name="SeedInput" type="LineEdit" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 511.0
margin_right = 1228.0
margin_bottom = 535.0

[node name="CreateButton" type="TextureButton" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_left = 504.0
margin_top = 539.0
margin_right = 724.0
margin_bottom = 594.0
rect_min_size = Vector2( 220, 55 )
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
expand = true

[node name="Create" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/CreateButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Create"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Template" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[connection signal="tree_entered" from="." to="." method="_on_LoadGame_tree_entered"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/VBoxContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
